styles.css
/* ... */
        
        .seek_slider:hover,
        .volume_slider:hover {
          opacity: 1.0;
        }
        
        .seek_slider {
          width: 100%;
        }
        
        .volume_slider {
          width: 30%;
          display: float;
          float: right;
        }
        
        .current-time,
        .total-duration {
          padding: 10px;
        }
        
        i.fa-volume-down,
        i.fa-volume-up {
          padding: 10px;
        }
        
        .audio-buttons {
              cursor: url('media/custom-cursor/astro_arrow.png'), default;
          width: 30px;
		  align-content: center;
			justify-content: center;
			align-items: center;
			display: flex;
        }

/* Footer */
footer {
    background-color: var(--orange);
    color: var(--light-bg);
    padding: 20px 20px 10px;
    text-align: center;
}

footer .social-links {
    margin-bottom: 5px;
}

footer .social-links a {
    color: var(--dark-blue);
    text-decoration: none;
    margin: 0 10px;
    font-size: 1.2em;
    transition: color 0.3s ease;
}

footer .social-links a:hover {
    color: var(--purple);
    text-decoration: underline;
}

footer p {
    margin: 0;
    font-size: 0.9em;
}

/* Responsive Design */
@media (max-width: 740px) {
    .project {
        background-color: var(--purple);
        margin: 0;
        padding: 0;
        margin-top: 20px;
        margin-bottom: 20px;
        border-radius: 5px;
        box-shadow: 0 0 10px var(--dark-shadow);
    }

    .project-about {
        margin-bottom: 20px;
    }

    nav ul li {
        font-size: small;
        background-color: var(--transparent-light-orange);
    }
}

	.player-middle {
          display: flex;
          justify-content: center;
          align-items: center;
          flex-direction: column;
		  position: fixed;
		  bottom: 0;
		  left: 25%;
		  right: 0%;
}

@media (min-width: 740px) {
    .project {
        background-color: var(--purple);
        margin: 20px auto;
        padding: 20px;
        border-radius: 5px;
        box-shadow: 0 0 10px var(--dark-shadow);
        min-height: 226px;
        max-width: 726px;
    }

    .project-about {
        margin: 20px;
    }

.portfolio { 
    column-count: 2;
    column-fill: balance;
}

    nav ul li {
        margin: 0 20px;
        background-color: var(--transparent-light-orange);
    }
}

@media (min-width: 1050px) {
    .portfolio { 
        column-count: 3;
        column-fill: balance;
    }
	.player-middle {
          display: flex;
          justify-content: center;
          align-items: center;
          flex-direction: column;
		  position: fixed;
		  bottom: 0;
		  left: 25%;
		  right: 25%;
	}
}

/* Slider Styles */
.post-slider {
    display: flex;
    box-sizing: border-box;
    margin: 0 0 var(--gap) 0;
    padding: 0 1rem 1rem;
    position: relative;
    overflow-x: scroll;
    scroll-snap-type: x mandatory;
    scroll-snap-points-x: repeat(250px); /* older syntax for scroll snapping */
    -webkit-overflow-scrolling: touch;
}

.post-slider::-webkit-scrollbar {
    width: 10px;
    height: 10px;
}

.post-slider::-webkit-scrollbar-thumb {
    background: #434343;
    border-radius: 10px;
    box-shadow: inset 2px 2px 2px var(--highlight-shadow),
                inset -2px -2px 2px var(--lowlight-shadow);
}

.post-slider::-webkit-scrollbar-track {
    background: linear-gradient(to right, #434343, #434343 1px, #262626 1px, #262626);
}

.mini-card {
    flex: 0 0 auto;
    width: 250px;
    scroll-snap-align: start;
    margin-right: 15px;
    background-color: var(--mid-blue);
    border-radius: 5px;
    box-shadow: 0 0 10px var(--dark-shadow);
    color: var(--light-bg);
    transition: transform 0.3s ease;
}

.mini-card:hover {
    transform: scale(1.05);
}

.mini-card img {
    width: 100%;
    height: auto;
    border-top-left-radius: 5px;
    border-top-right-radius: 5px;
}

.mini-card-content {
    padding: 15px;
}

.mini-card h3 {
    margin: 0 0 10px;
    font-size: 1.2em;
    color: var(--light-orange);
}

.mini-card p {
    margin: 0;
    font-size: 1em;
    color: var(--light-bg);
}

/* Responsive Adjustments */
@media (max-width: 1200px) {
    .post-slider {
        padding-bottom: var(--gap);
        padding-left: 5px;
    }
}

@media (max-width: 740px) {
    .mini-card {
        width: 200px;
    }
}


/* CSS */
nav ul li a button {
  align-items: center;
  background-clip: padding-box;
  box-sizing:border-box;
  background-color: var(--dark-orange);
  border: 1px solid transparent;
  border-radius: .25rem;
  box-shadow: rgba(0, 0, 0, 0.02) 0 1px 3px 0;
  box-sizing: border-box;
  color: var(--light-orange);
      cursor: url('media/custom-cursor/astro_link.png'), pointer;
  display: inline-flex;
  /* font-family: system-ui,-apple-system,system-ui,"Helvetica Neue",Helvetica,Arial,sans-serif; */
  font-size: 16px;
  font-weight: 600;
  justify-content: center;
  line-height: 1.25;
  margin: 0;
  min-height: 3rem;
  padding: calc(.875rem - 1px) calc(1.5rem - 1px);
  position: relative;
  text-decoration: none;
  transition: all 250ms;
  user-select: none;
  -webkit-user-select: none;
  touch-action: manipulation;
  vertical-align: baseline;
  width: auto;
  border-bottom: 2px solid transparent;

}

nav ul li a button:hover,
nav ul li a button:focus {
  background-color: var(--mid-orange);
  box-shadow: rgba(0, 0, 0, 0.1) 0 4px 12px;
}

nav ul li a button:hover {
  transform: translateY(-1px);
}

nav ul li a button:active { 
  background-color: #c85000;
  box-shadow: rgba(0, 0, 0, .06) 0 2px 4px;
  transform: translateY(0);
}

